--- a/Conter/res/values/strings.xml
+++ b/Conter/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Conter</string>
+    <string name="app_name">bqi-Counter</string>
     <string name="action_settings">Settings</string>
     <string name="Create">Create a counter</string>
     <string name="Load">Load a counter</string>
@@ -21,5 +21,4 @@
     <string name="title_activity_summary">SummaryActivity</string>
     <string name="delete">Delete a counter</string>
     <string name="title_activity_delete">DeleteActivity</string>
-
 </resources>
